--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.8",
-    "normalize-css": "^7.0.0"
+    "normalize-css": "^7.0.0",
+    "angular-ui-router": "^1.0.4"
   }
 }
